Stop canvas disappearing on ios

--- a/src/index.scss
+++ b/src/index.scss
@@ -45,15 +45,6 @@ textarea {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-
-	touch-action: none;
-	-webkit-touch-callout: none;
-	-webkit-user-select: none;
-	-khtml-user-select: none;
-	-moz-user-select: none;
-	-ms-user-select: none;
-	user-select: none;
-    -webkit-tap-highlight-color: transparent;
 }
 
 h1 {
